# aigate

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  recommend-limits.sh
asr-canary/: Dockerfile  Dockerfile.cuda  entrypoint.sh  models-cpu.json  models.json  pyproject.toml
asr-canary/src/asr_canary/: __init__.py  audio.py  config.py  logging.py  server.py
asr-canary/src/asr_canary/models/: __init__.py  base.py  multitask.py  salm.py
docs/: README.md  mcp-tools.md  providers.md  resource-management.md  services-reference.md  testing.md  usage.md
docs/services/: README.md  audiolla.md  browser.md  claudebox.md  cloudflared.md  flickies.md  hybrids3.md  librechat.md  litellm.md  llamacpp.md  mailbox.md  mcp.md  piston.md  predictalot.md  resource-management.md  sdcpp.md  searxng.md  tailscale.md  talkies.md  telethon.md  vllm.md
litellm/: Dockerfile  build-config.py
litellm/callbacks/: resource_manager.py
litellm/config/: base.yaml  fallbacks.json
litellm/config/mcp/: audiolla-cuda.yaml  audiolla.yaml  flickies-cuda.yaml  flickies.yaml  mailbox.yaml  mcp.yaml  pibox-zai.yaml  predictalot-cuda.yaml  predictalot.yaml
litellm/config/providers/: asr-canary-cuda.yaml  asr-canary.yaml  cerebras.yaml  claudebox.yaml  embed-local.yaml  gemini.yaml  groq.yaml  llamacpp-cuda.yaml  llamacpp.yaml  nvidia.yaml  ollama-cuda.yaml  openai.yaml  openrouter.yaml  pibox-zai.yaml  speaches-cuda.yaml  speaches.yaml  talkies-cuda.yaml  talkies.yaml  vllm-cuda.yaml  vllm-local.yaml  vllm.yaml
llamacpp/: Dockerfile.cpu  Dockerfile.cuda  entrypoint.sh  models.cpu.json  models.cuda.json  pyproject.toml
llamacpp/src/llamacpp_wrap/: _net.py  config.py  logging.py  server.py  supervisor.py
llamacpp/src/llamacpp_wrap/handlers/: __init__.py  base.py  surya.py
mailbox/: config.example.yaml
mcp/: server.py
piston/: Dockerfile  prebake-install.sh
talkies/: Dockerfile  entrypoint.sh  models.json  pyproject.toml
talkies/src/talkies/: config.py
talkies/src/talkies/models/: __init__.py  multitask.py  parakeet.py  salm.py  whisper.py
tests/: test_asr_canary.sh  test_audiolla.sh  test_claudebox.sh  test_flickies.sh  test_health.sh  test_integration.sh  test_litellm.sh  test_llamacpp.sh  test_mailbox.sh  test_mcp.sh  test_mcp_media.sh  test_nginx.sh  test_pibox.sh  test_piston.sh  test_predictalot.sh  test_proxq.sh  test_security.sh  test_talkies.sh  test_telethon.sh  test_vllm.sh
vllm/: Dockerfile.cpu  Dockerfile.cuda  entrypoint.sh  models.cpu.json  models.cuda.json  models.json  pyproject.toml
vllm/src/vllm_wrap/: __init__.py  config.py  logging.py  server.py  supervisor.py
