[project]
name = "vllm-wrap"
version = "0.1.0"
description = "vLLM audio-LLM wrapper — supervises a single `vllm serve` subprocess and proxies OpenAI-compat /v1/audio/transcriptions + /v1/chat/completions with lazy-load + idle TTL unload"
license = { text = "WTFPL" }
requires-python = ">=3.10,<3.13"
authors = [{ name = "psyb0t" }]
keywords = ["asr", "speech-to-text", "vllm", "voxtral", "qwen", "granite", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# Lightweight wrapper deps only — vllm itself ships in the base Docker image.
dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.47.0",
    "pydantic==2.13.4",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
]

[project.urls]
Homepage = "https://github.com/psyb0t/aigate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vllm_wrap"]

[tool.uv]
exclude-newer = "2026-05-25T00:00:00Z"
